auto emulator code updated

--- a/test-output/index.html
+++ b/test-output/index.html
@@ -190,12 +190,12 @@ data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'totalValidation')
 data.setCell(0, 2, 'AppiumFramework.AppiumFramework.Ecommerce_tc_4')
-data.setCell(0, 3, 181171);
+data.setCell(0, 3, 131496);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 3 minutes</span>
+              <span class="suite-total-time">Total running time: 2 minutes</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -222,9 +222,13 @@ return data;
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
               <div class="chronological-class-name">AppiumFramework.AppiumFramework.Ecommerce_tc_4</div> <!-- chronological-class-name -->
+              <div class="configuration-test before">
+                <span class="method-name">KillAllNodes</span>
+                <span class="method-start">0 ms</span>
+              </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">totalValidation</span>
-                <span class="method-start">0 ms</span>
+                <span class="method-start">3071 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
